--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.5.6",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "less": "^3.11.1",
     "less-loader": "5.0.0",
