Uuse data from api on Customer page

--- a/.env.release
+++ b/.env.release
@@ -2,8 +2,8 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'https://www.308262.com/wanlian-dev/public/index.php/api/front'
+VUE_APP_BASE_API = 'https://www.308262.com/wanlian-dev/public/index.php'
 
-VUE_APP_BASE_DOMAIN = 'http://www.wanlian.com'
+VUE_APP_BASE_DOMAIN = 'https://www.308262.com/wanlian-dev/public'
 
 VUE_APP_PUBLIC_PATH='/wl_frontend_ci_test/dist/'
