--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ ENV = 'development'
 
 # base api
 
-VUE_APP_BASE_API = 'http://www.wanlian.com/index.php/api/front'
+VUE_APP_BASE_API = 'http://www.wanlian.com/index.php'
 
 VUE_APP_PUBLIC_PATH=''
 
