--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ ENV = 'development'
 
 VUE_APP_BASE_API = 'http://www.wanlian.com/index.php'
 
-VUE_APP_PUBLIC_PATH=''
+VUE_APP_PUBLIC_PATH='./'
 
 # base doman name
 VUE_APP_BASE_DOMAIN = 'http://www.wanlian.com'
