--- a/.env.release
+++ b/.env.release
@@ -6,4 +6,4 @@ VUE_APP_BASE_API = 'https://www.308262.com/wanlian-dev/public/index.php'
 
 VUE_APP_BASE_DOMAIN = 'https://www.308262.com/wanlian-dev/public'
 
-VUE_APP_PUBLIC_PATH='/wl_frontend_ci_test/dist/'
+VUE_APP_PUBLIC_PATH='./'
