update vue prod dev file

--- a/.env.production
+++ b/.env.production
@@ -2,8 +2,9 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'https://www.308262.com/wanlian-homepage/admin-prod/public/index.php'
 
-VUE_APP_BASE_DOMAIN = 'https://www.308262.com/wanlian-homepage/admin-prod/public'
+VUE_APP_BASE_API = 'http://13.114.169.27/public/index.php'
 
-VUE_APP_PUBLIC_PATH='/wanlian-homepage/front-prod/dist/'
+VUE_APP_BASE_DOMAIN = 'http://13.114.169.27/public'
+
+VUE_APP_PUBLIC_PATH='/'
